viewer/bridge/tidyvnc.h

/* Internal versioned ABI. All calls are thread-safe and nonblocking with respect
 * to protocol work; create may allocate/start threads. No caller thread joins.
 * IDs are opaque, process-local, typed by the implementation, and never reused.
 * Each returned handle owns one reference; retain/release on any thread. Keep a
 * reference throughout each call and while using borrowed spans. A final session
 * release initiates close; a final runtime release initiates shutdown. Draining
 * is explicit and can be polled without waiting. Invalid IDs are rejected.
 *
 * Caller pointers must address accessible memory for their declared lengths;
 * the ABI validates null/length/overflow, not arbitrary address accessibility.
 * Initialize every struct to zero, then set size=sizeof(struct), version=1.
 * Larger structs are accepted: known input reserved fields must be zero; unknown tail
 * bytes are ignored and never written. Unsupported versions/mandatory flags fail.
 * Outputs remain unchanged on failure/NO_CHANGE/PENDING, except optional errors.
 * Output handles must be released before overwriting their storage on a new call.
 */
typedef uint64_t tidyvnc_handle;
typedef uint32_t tidyvnc_status;
typedef struct { const uint8_t* data; uint64_t length; } tidyvnc_bytes;
typedef struct { uint8_t* data; uint64_t length; } tidyvnc_mutable_bytes;
typedef struct {
  uint32_t size, version, code, domain;
  uint32_t detail; int32_t native_error;
  char message[160]; /* Fixed diagnostic text; never copies endpoints or secrets. */
} tidyvnc_error;
typedef struct {
  uint32_t size, version, kind, secure, username_required, certificate_status;
  uint64_t id, generation;
  tidyvnc_bytes server_name, identity, fingerprint; /* Borrowed from prompt handle. */
} tidyvnc_prompt_info;
TIDYVNC_API tidyvnc_status tidyvnc_session_pointer(tidyvnc_handle, uint64_t generation, int32_t x, int32_t y, uint32_t buttons, tidyvnc_error*);
TIDYVNC_API tidyvnc_status tidyvnc_session_focus(tidyvnc_handle, uint64_t generation, uint32_t focused, tidyvnc_error*);
/* Release queued/held input and invalidate delayed routing, preserving focus and
 * view-only policy. Allowed while view-only/unfocused; generation must be current. */
TIDYVNC_API tidyvnc_status tidyvnc_session_release_input(tidyvnc_handle, uint64_t generation, tidyvnc_error*);
TIDYVNC_API tidyvnc_status tidyvnc_session_view_only(tidyvnc_handle, uint32_t enabled, tidyvnc_error*);
/* Atomic connection policy; boolean arguments. Default emulation is off.
 * Left/right chord delay is 50 ms on the session executor. A policy change
 * cancels unsent input and releases held keys/buttons when emulation changes
 * or view-only is enabled. Policy survives reconnect; delayed events do not. */
TIDYVNC_API tidyvnc_status tidyvnc_session_input_policy(tidyvnc_handle, uint32_t view_only,
                                          uint32_t emulate_middle, tidyvnc_error*);
TIDYVNC_API tidyvnc_status tidyvnc_shortcut_create(uint32_t modifiers, tidyvnc_handle*, tidyvnc_error*);
TIDYVNC_API tidyvnc_status tidyvnc_shortcut_modifiers(tidyvnc_handle, uint32_t modifiers, tidyvnc_error*);
TIDYVNC_API tidyvnc_status tidyvnc_shortcut_key(tidyvnc_handle, int32_t physical_id, uint32_t keysym,
                                  uint32_t down, uint32_t* action, tidyvnc_error*);
TIDYVNC_API tidyvnc_status tidyvnc_shortcut_reset(tidyvnc_handle, tidyvnc_error*);
/* Any thread. Takes the session's next pending credential/trust request as a new
 * immutable prompt handle owned by the caller (release with tidyvnc_release);
 * NO_CHANGE when none is pending. Taking does not answer the request: reply with
 * its id/generation. prompt_get copies the fields; server_name, identity and
 * fingerprint are borrowed from the prompt handle until it is released. */
TIDYVNC_API tidyvnc_status tidyvnc_session_take_prompt(tidyvnc_handle, tidyvnc_handle* prompt, tidyvnc_error*);
TIDYVNC_API tidyvnc_status tidyvnc_prompt_get(tidyvnc_handle, tidyvnc_prompt_info*, tidyvnc_error*);
/* Immutable negotiated credential subtype; zero for trust/legacy prompts.
 * Output remains unchanged on failure. No session or active prompt required. */
TIDYVNC_API tidyvnc_status tidyvnc_prompt_security_type(tidyvnc_handle, uint32_t*, tidyvnc_error*);
/* Credentials are copied into the rendezvous. Both mutable input spans are wiped
 * on every return, including rejection, when non-null and length <= 4096. The
 * caller owns/frees their storage. No zeroization guarantee for caller copies or
 * foreign runtimes. Plain immutable text submission is deliberately absent. */
TIDYVNC_API tidyvnc_status tidyvnc_session_reply_credentials(tidyvnc_handle, uint64_t id, uint64_t generation,
  tidyvnc_mutable_bytes username, tidyvnc_mutable_bytes password, tidyvnc_error*);
/* CREDENTIAL_BYTES: same consuming prompt reply, accepting bounded non-NUL
 * legacy byte strings without UTF-8 conversion (for captured environment inputs).
 * Each span is bounded to 4096 bytes and wiped under the same ownership contract.
 * The ordinary credential text API remains UTF-8. No persistence or reuse. */
TIDYVNC_API tidyvnc_status tidyvnc_session_reply_credential_bytes(tidyvnc_handle, uint64_t id, uint64_t generation,
  tidyvnc_mutable_bytes username, tidyvnc_mutable_bytes password, tidyvnc_error*);
/* PASSWORD_FILE_REPLY: decode exactly the first 8 bytes of a legacy VNC password
 * file through the shared codec, then answer only a current password-only prompt.
 * The block is obfuscated, not encrypted. No file IO or credential persistence.
 * Non-UTF-8 password bytes are preserved, terminating at the first decoded NUL.
 * Mutable input is wiped on every return when non-null and length <= 4096,
 * including invalid size, stale/wrong-kind requests and invalid error headers.
 * Host must gate file access on a current prompt and discard cancelled reads. */
TIDYVNC_API tidyvnc_status tidyvnc_session_reply_password_file(tidyvnc_handle, uint64_t id, uint64_t generation,
  tidyvnc_mutable_bytes obfuscated, tidyvnc_error*);
TIDYVNC_API tidyvnc_status tidyvnc_session_reply_trust(tidyvnc_handle, uint64_t id, uint64_t generation, uint32_t allowed, tidyvnc_error*);