platform/windows/TidyVNC.Native/Bridge/Interop.g.cs


    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_session_pointer(ulong p0, ulong generation, int x, int y, uint buttons, tidyvnc_error* p5);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_session_focus(ulong p0, ulong generation, uint focused, tidyvnc_error* p3);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_session_release_input(ulong p0, ulong generation, tidyvnc_error* p2);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_session_view_only(ulong p0, uint enabled, tidyvnc_error* p2);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_session_input_policy(ulong p0, uint view_only, uint emulate_middle, tidyvnc_error* p3);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_shortcut_create(uint modifiers, ulong* p1, tidyvnc_error* p2);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_shortcut_modifiers(ulong p0, uint modifiers, tidyvnc_error* p2);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_shortcut_key(ulong p0, int physical_id, uint keysym, uint down, uint* action, tidyvnc_error* p5);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_shortcut_reset(ulong p0, tidyvnc_error* p1);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_session_take_prompt(ulong p0, ulong* prompt, tidyvnc_error* p2);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_prompt_get(ulong p0, tidyvnc_prompt_info* p1, tidyvnc_error* p2);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_prompt_security_type(ulong p0, uint* p1, tidyvnc_error* p2);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_session_reply_credentials(ulong p0, ulong id, ulong generation, tidyvnc_mutable_bytes username, tidyvnc_mutable_bytes password, tidyvnc_error* p5);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_session_reply_credential_bytes(ulong p0, ulong id, ulong generation, tidyvnc_mutable_bytes username, tidyvnc_mutable_bytes password, tidyvnc_error* p5);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_session_reply_password_file(ulong p0, ulong id, ulong generation, tidyvnc_mutable_bytes obfuscated, tidyvnc_error* p4);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_session_reply_trust(ulong p0, ulong id, ulong generation, uint allowed, tidyvnc_error* p4);
}
